--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileInfoFTP.cs" />
     <Compile Include="ViewModelMessage.cs" />
     <Compile Include="ViewModelSend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
