--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="data\AppDbContext.cs" />
+    <Compile Include="models\CommandHistory.cs" />
+    <Compile Include="models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
